--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,3 @@
-
-
 .logo {
     /* position: relative; */
     top:0;
@@ -60,7 +58,7 @@
   
 .header-search-bar input {
     padding: 6px 10px;
-    border: 1px solid #2c2c2c;
+    border: 0.5px solid #2c2c2c;
     border-radius: 6px 0 0 6px;
     outline: none;
     height: 30px;
@@ -69,7 +67,7 @@
   
 .header-search-bar button {
     background-color: #e3e3e3;
-    border: 1px solid #2c2c2c;
+    border: 0.5px solid #2c2c2c;
     border-left: none;
     border-radius: 0 6px 6px 0;
     cursor: pointer;
@@ -78,8 +76,7 @@
 }
 
 .search-icon {
-    width: 10px;
-    
+    width: 10px;  
 }
 
 #btn-create-event {
